# GlyphaSDL

./: CMakeLists.txt  Galpa3.sln  main.c  setup.sh
.github/workflows/: cmake-multi-platform.yml  macOS  macOs.yml  main.yml
Galpa3/: CMakeLists.txt  Externs.h  Galpa3.vcxproj  Galpa3.vcxproj.filters  Graphics.cpp  Graphics.h  InterfaceOLD.c  PlayOLD.c  PrefsOLD.c  SetUpTakeDown.c  SetUpTakeDownOLD.c  Utilities.c  UtilitiesOLD.c  common.h  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.h  structs.h
Galpa3/Img/: 128  130  134  136  144  146
Galpa3/Img/.finf/: 139  146  147
Galpa3/Img/.rsrc/: 128  132  133  142
Galpa3/OldCode/: EnemyOLD.c  MainOLD.c  SetUpTakeDownOLD.c
Galpa3/Snd/: Ahnk.aiff  Boom 2.aiff  Flip.aiff  Scrape 2.aiff
Galpa3/x64/Debug/: Galpa3.ilk  vc143.idb
Galpa3/x64/Debug/Galpa3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Img/: 129  131  135  138  139  140  141  142  143  145  148
Img/.finf/: 128  129  130  131  132  133  134  135  136  137  138  140  141  145  148
Img/.rsrc/: 129  130  131  134  135  136  137  138  139  140  144  145  146  147  148
NewCode/: CMakeLists.txt  Enemy.c  Externs.h  Graphics.c  Interface.c  Main.c  Play.c  SetUpTakeDown.c  Sound.c  Utilities.c
NewCode/CoreSDL/: SDL_Interface.c  SDL_Interface.h  SDL_Sound.c  SDL_Sound.h  SDL_Utilities.c  SDL_Utilities.cpp  SDL_Utilities.h  Sound.cpp  Sound.h  String.c  String.h
NewCode/Img/: 132  133  137  147
NewCode/Img/.finf/: 142  143  144
NewCode/Img/.rsrc/: 141  143
OldCode/: EnemyOLD.c  ExternsOLD.h  GraphicsOLD.c  MainOLD.c  SoundOLD.c
Snd/: Bird.aiff  Bonus.aiff  Boom 1.aiff  Drip.aiff  Flap 2.aiff  Flap.aiff  Grating.aiff  Lightning.aiff  Music.aiff  Rez.aiff  Screech.aiff  Spawn.aiff  Walk.aiff
doc/: Dibujado.md  Types.md
includes/: common.h  defs.h  draw.h  init.h  input.h  main.h  sound.h  structs.h
src/: Utilities.c  draw.c  init.c  input.c  sound.c
x64/Debug/: Galpa3.exe.recipe  Galpa3.ilk  vc143.idb
x64/Debug/Galpa3.tlog/: CL.read.1.tlog  Cl.items.tlog  Galpa3.lastbuildstate  link.command.1.tlog  link.write.1.tlog
